--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.13.4",
+    "@clerk/nextjs": "^4.29.2",
+    "@clerk/themes": "^1.7.9",
     "@edgestore/react": "^0.1.6",
     "@edgestore/server": "^0.1.6",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -29,6 +32,7 @@
     "react-text-truncate": "^0.19.0",
     "react-textarea-autosize": "^8.5.3",
     "recoil": "^0.7.7",
+    "svix": "^1.15.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
