--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,19 +14,27 @@
     "@clerk/themes": "^1.7.9",
     "@edgestore/react": "^0.1.6",
     "@edgestore/server": "^0.1.6",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "country-codes-list": "^1.6.11",
+    "date-fns": "^3.2.0",
     "lucide-react": "^0.307.0",
     "next": "14.0.4",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
     "react-country-flag": "^3.1.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-text-truncate": "^0.19.0",
