--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,8 +12,10 @@
     "@clerk/clerk-sdk-node": "^4.13.4",
     "@clerk/nextjs": "^4.29.2",
     "@clerk/themes": "^1.7.9",
+    "@echo/database": "*",
     "@edgestore/react": "^0.1.6",
     "@edgestore/server": "^0.1.6",
+    "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -23,6 +25,8 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.17.10",
+    "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "country-codes-list": "^1.6.11",
