--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@everything/database",
+  "name": "@echo/database",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "version": "0.0.1",
